src/tests/testfiles/binary-operators/28.txt
testfiles/binary-operators/28.c:2:5: error: invalid operands to logical 'and' (have 'char' and 'char', need 'int' and 'int')
'a' && 'b';
^
